# WildfireNowcast

./: .deployment_info  .dockerignore  .env.template  .gitignore  .runtime_id  ARCHITECTURE.md  DEPLOYMENT_GUIDE.md  NASA_IMPLEMENTATION_ANALYSIS.md  QUICKSTART.md  README.md  cleanup.py  create_cognito_setup.sh  deploy.py  deploy_all.sh  env_example.txt  pyproject.toml  requirements.txt  sample_assets.json  setup_env.py  test_agent.py  test_improved_nasa_tools.py  wildfire_nowcast_agent.py
agent-runtime/: cognito_credentials_provider.py  wildfire_strands_agent_runtime.py  wildfire_strands_agent_runtime_deploy.py
backend/: .env.example  README.md  main.py  requirements.txt  run_local.sh
frontend/: .env.example  README.md  api_server.py  index.html  main.py  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt  setup.py  setup_and_run.sh  tsconfig.json  vite-env.d.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AgentIntelligence.tsx  AgentShowcase.tsx  WildfireDashboard.tsx  WildfireDashboard_with_map.tsx
frontend/src/services/: api.ts
frontend/static/css/: wildfire.css
frontend/templates/: wildfire_chat.html  wildfire_dashboard.html
gateway/: create_gateway.py  requirements.txt  wildfire-detection-target.py
tools/: __init__.py  ics_tools.py  improved_nasa_tools.py  mapping_tools.py  memory_tools.py  multi_agent_nasa.py  nasa_tools.py  threat_tools.py
wildfire-detection/: alert_processor.py  deploy.sh  dynamodb_models.py  lambda_function.py  notification_system.py  synthetic_data.py  test_lambda.py
